add base app.js

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@3rdweb/hooks": "^1.6.0",
+    "@3rdweb/sdk": "^1.29.16",
+    "@web3-react/core": "^6.1.9",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
