--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "ethers": "^5.5.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "3.2.0",
+    "semantic-ui-react": "^2.0.4",
     "web3": "1.2.2"
   },
   "scripts": {
